cabal-version:      3.0
name:               markov-chain-text-generator
version:            0.1.0.0
license:            MIT
build-type:         Simple

executable markov
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5,
                      text >=1.2 && <2.1,
                      containers >=0.6 && <0.7,
                      random >=1.2 && <1.3
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2